src/test/ImmutableFail/ImmutableFail.expected
error: ImmutableFail.panda:4:9: immutable class 'ImmutableFail' has mutable field 'array' (panda.collections.Array<panda.core.Char>)
error: ImmutableFail.panda:5:9: immutable class 'ImmutableFail' may not contain variables; did you mean to use 'def' instead?
2 errors
