src/test/ImmutableFail/ImmutableFail.panda
class ImmutableFail : Immutable {
    def a := "String"
    def i := 48
    def array := PrimitiveArray<Char>("H", "e", "l", "l", "o")
    var v := 5

    @class
    method main() {
        Console.writeLine("can't happen")
    }
}